# casys

./: .gitignore  Wire update diagram.afphoto  main.py  pyproject.toml  pyrightconfig.json
src/casys/: __init__.py  _ca_kernel.py  _cac_type.py  _step_func.py  buffer_access_handling.py  config.py  core.py  debug_utils.py  kernel_ast_meta.py  kernel_func_handlers.py  kernel_processing.py  kernel_utils.py  kernel_values.py  logging.py  sim_manager.py  soa.py  step_func_preprocessing.py  step_func_preprocessing_old.py  wrappers.py
src/casys/_ast_pattern_utils/: assign_rewrite_template.py  ast_pattern_engine.py  ast_pattern_templates.py
src/casys/_utils/: ast_unparse.py  ast_utils.py  debug_utils.py  misc_utils.py
src/casys/debug_tools/: ast_timeline_viewer.py  ast_timeline_viewer_old.py
src/casys/dsl/: kernel_utils.py
src/casys/dsl/_core/: ca_system.py  casys_ast.py  core_macros.py  core_transpiler.py  descriptors.py  errors.py  ir.py  kernel_values.py  layer_usage_info_helper.py  metadata_store copy.py  soa_field_usage_info_helper.py  source_management.py  transpilers.py
src/casys/dsl/_core/debug/: dynsrc.py  (+2 more)
src/casys/spec/: ca_kernel.py  ca_layer_spec.py  cac_type.py  cact_field_spec.py  step_func.py  virtual_types.py  world_spec.py
src/casys/transpiler/: casys_ast.py  core.py  kernel_ast.py  kernel_func_handlers.py  kernel_processing.py  soa.py  step_func_preprocessing.py  utils.py
src/casys/viz/: __init__.py  extensions.py  renderer.py
src/casys/viz/gui/: canvas_widget.py  main_window.py  overlay.py  ui_model.py
src/casys/viz/tools/: api.py  core.py
(+50 files in other folders)
