[project]
name = "casys"
version = "0.1.0"
description = "A batteries-included general framework for building and running Cellular Automate simulations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astpretty>=3.0.0",
    "dearpygui>=2.1.0",
    "glfw>=2.9.0",
    "libcst>=1.8.2",
    "moderngl>=5.12.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pyside6>=6.9.1",
    "rich>=14.0.0",
    "vispy>=0.15.2",
]

authors = [
    { name = "80sVectorz", email = "66908776+80sVectorz@users.noreply.github.com" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
